--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,7 +6,6 @@
         src: url('/Orbitron-VariableFont_wght.ttf');
         }
     .container{
-        font-family:Arial, Helvetica, sans-serif;
         color:black;
         display:flex;
         flex-direction:column;
@@ -70,6 +69,15 @@
     }
     .social button path:hover{
         fill:lightgray;
+    }
+    footer{
+        position:fixed;
+        bottom:0;
+        color:lightgray;
+        width:100%;
+        text-align: center;
+        font-family: 'Orbitron', sans-serif;
+        font-size:11px;
     }
         @media (max-width:768px){
             .social button{
