--- a/assets/styles.css
+++ b/assets/styles.css
@@ -79,7 +79,7 @@
         width:100%;
         text-align: center;
         font-family: 'Orbitron', sans-serif;
-        font-size:11px;
+        font-size:0.9vw;
     }
         @media (max-width:768px){
             .social button{
